[gd_scene load_steps=3 format=3 uid="uid://do68nnbpuxn4x"]

[ext_resource type="LabelSettings" uid="uid://dt4d8t41tnpa1" path="res://assets/GM_white_32.tres" id="1_6yv1g"]
[ext_resource type="Script" path="res://scenes/hud/hud.gd" id="1_v2l2r"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v2l2r")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VB" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="HB" type="HBoxContainer" parent="MC/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VB/HB"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Level"
label_settings = ExtResource("1_6yv1g")
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="MC/VB/HB"]
layout_mode = 2
text = "0
"
label_settings = ExtResource("1_6yv1g")
vertical_alignment = 1

[node name="HB2" type="HBoxContainer" parent="MC/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VB/HB2"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Moves"
label_settings = ExtResource("1_6yv1g")
vertical_alignment = 1

[node name="MovesLabel" type="Label" parent="MC/VB/HB2"]
layout_mode = 2
text = "0
"
label_settings = ExtResource("1_6yv1g")
vertical_alignment = 1

[node name="HB3" type="HBoxContainer" parent="MC/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VB/HB3"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Best"
label_settings = ExtResource("1_6yv1g")
vertical_alignment = 1

[node name="BestScoreLabel" type="Label" parent="MC/VB/HB3"]
layout_mode = 2
text = "0
"
label_settings = ExtResource("1_6yv1g")
vertical_alignment = 1
